--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <ul class="link-list">
       <li><a class="mail" href="mailto:info@devstudio.com">
       <svg width="16" height="12">
-        <use href="./img/iconssvg/envelope (hover).svg" ></use> 
+        <use href="./img/iconssvg/envelope (hover).svg" >
+          <svg id="icon-envelope-hover" viewBox="0 0 43 32" width="100%" height="100%"><path fill="#2196f3" style="fill:var(--color1, #2196f3)" d="M38.667 0H4C1.794 0 0 1.794 0 4v24c0 2.206 1.794 4 4 4h34.667c2.206 0 4-1.794 4-4V4c0-2.206-1.794-4-4-4zm0 2.667c.181 0 .353.038.511.103L21.334 18.236 3.49 2.77a1.32 1.32 0 0 1 .511-.103h34.667zm0 26.666H4A1.334 1.334 0 0 1 2.667 28V5.587L20.46 21.008a1.335 1.335 0 0 0 1.748 0L40.001 5.587V28c0 .736-.598 1.333-1.333 1.333z"></path>
+          </svg>
+          </use> 
     </svg>
          
         info@devstudio.com</a></li>
