--- a/index.html
+++ b/index.html
@@ -135,14 +135,10 @@
               <p class="name">Ігор Дем’яненко</p>
               <p class="Qualifying" >Product Designer</p>
               <ul class="symbol-icons">
-                <li class="networks
-"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-instagram"></use></svg> </a> </li>
-                <li class="networks
-"> <a href=""> <svg width="20" height="16"><use href="./img/symbol-defs.svg#icon-twitter"></use></svg> </a> </li>
-                <li class="networks
-"> <a href=""> <svg width="10" height="20"><use href="./img/symbol-defs.svg#icon-facebook"></use></svg> </a> </li>
-                <li class="networks
-"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-linkedin"></use></svg> </a> </li>
+                <li class="networks"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-instagram"></use></svg> </a> </li>
+                <li class="networks"> <a href=""> <svg width="20" height="16"><use href="./img/symbol-defs.svg#icon-twitter"></use></svg> </a> </li>
+                <li class="networks"> <a href=""> <svg width="10" height="20"><use href="./img/symbol-defs.svg#icon-facebook"></use></svg> </a> </li>
+                <li class="networks"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-linkedin"></use></svg> </a> </li>
             </ul>
           </li>
           <li class="team-link" >
@@ -176,7 +172,7 @@
             <ul class="symbol-icons">
               <li class="networks"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-instagram"></use></svg> </a> </li>
               <li class="networks"> <a href=""> <svg width="20" height="16"><use href="./img/symbol-defs.svg#icon-twitter"></use></svg> </a> </li>
-              <li class="networks"> <a href=""> <svg width="10" height="20"><use href="./img/symbol-defs.svg#icon-facebook"></use></svg> </a> </li>
+              <li class="networks"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-facebook"></use></svg> </a> </li>
               <li class="networks"> <a href=""> <svg width="20" height="20"><use href="./img/symbol-defs.svg#icon-linkedin"></use></svg> </a> </li>
           </ul>
         </li>
